Do some changes in main tkinter window

--- a/face_recognizer.ipynb
+++ b/face_recognizer.ipynb
@@ -13,13 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "90deeab7-00be-41c0-93d8-401a395a9952",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "root = tk.Tk()\n",
     "root.geometry(\"600x400\")\n",
     "root.title(\"Face Recognizer\")\n",
@@ -29,29 +27,28 @@
     "label = tk.Label(root, text=\"WELCOME TO FACE RECOGNIZER...\", font=('Times New Roman', 20, 'bold'), bg=\"gray\")\n",
     "label.pack(padx=40, pady=20)\n",
     "\n",
-    "login_frame = tk.Frame(root, bg=\"gray\")\n",
-    "login_frame.pack(pady=20)\n",
+    "# Add a label for camera selection\n",
+    "camera_label = tk.Label(root, text=\"Select Camera:\", font=('Times New Roman', 15, 'bold'), bg=\"gray\")\n",
+    "camera_label.pack(pady=10)\n",
     "\n",
-    "user_id_label = tk.Label(login_frame, text=\"User ID:\", font=('Georgia', 16), bg=\"gray\")\n",
-    "user_id_label.grid(row=0, column=0, padx=10, pady=10)\n",
-    "user_id_entry = tk.Entry(login_frame, font=('Times New Roman', 16))\n",
-    "user_id_entry.grid(row=0, column=1, padx=10, pady=10)\n",
+    "# Add a dropdown (combobox) for selecting webcam or external cam\n",
+    "camera_options = [\"Webcam\", \"External Cam\"]\n",
+    "camera_select = ttk.Combobox(root, values=camera_options, font=('Georgia', 14), state=\"readonly\")\n",
+    "camera_select.current(0)  # Set default to 'Webcam'\n",
+    "camera_select.pack(pady=20)\n",
     "\n",
-    "username_label = tk.Label(login_frame, text=\"Username:\", font=('Georgia', 16), bg=\"gray\")\n",
-    "username_label.grid(row=1, column=0, padx=10, pady=10)\n",
-    "username_entry = tk.Entry(login_frame, font=('Times New Roman', 16))\n",
-    "username_entry.grid(row=1, column=1, padx=10, pady=10)\n",
-    "\n",
-    "login_button = tk.Button(root, text=\"Login\", font=('Georgia', 14, 'bold'), bg=\"white\")\n",
-    "login_button.pack()\n",
+    "# Login button\n",
+    "login_button = tk.Button(root, text=\"Detect Face\", font=('Georgia', 14, 'bold'), bg=\"white\")\n",
+    "login_button.pack(pady=10)\n",
     "\n",
     "label = tk.Label(root, text=\"or\", font=('Times New Roman', 15, 'bold'), bg=\"gray\")\n",
     "label.pack(padx=5, pady=5)\n",
     "\n",
+    "# Add Face button\n",
     "create_button = tk.Button(root, text=\"Add Face\", font=('Georgia', 14, 'bold'), bg=\"white\")\n",
     "create_button.pack()\n",
     "\n",
-    "root.mainloop()\n"
+    "root.mainloop()"
    ]
   },
   {
